k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-test-pod
spec:
  containers:
    - name: mysql
      image: mysql:5.7
      volumeMounts:
        - name: shared-storage
          mountPath: /var/lib/mysql
          subPath: mysql-test-pod
  volumes:
    - name: shared-storage
      persistentVolumeClaim:
        claimName: cluster-shared-pvc  # Ensure this PVC exists




# in every node
# sudo apt-get update
# sudo apt-get install nfs-common
